# metrics-tracker

./: .gitignore  main.py  pyproject.toml  scratch.ipynb
design/: detail_page_plan.md  implementation_plan.md  product_vision.md
design/archive/: add_metric_old.py  create.sql  detail.py  mock_data.py  models.py  product_vision.md
design/archive/aggregators/: __init__.py  aggregator.py  factory.py  none_aggregator.py  numeric_aggregator.py
design/mockups/: index.html
design/mockups/01-dashboard/: index.html
design/mockups/02-add-metric/: index.html
design/mockups/03d-detail-food/: index.html
design/mockups/03e-detail-glucose/: index.html
design/mockups/db/: analysis.ipynb  analysis.py  create.sql  metrics_defn.py  mock_data.py  test_analysis.py
design/mockups/ui/: index.html
src/: main.py  scratch.ipynb
src/app/: auth.py  models.py
src/app/components/: layout.py
src/app/pages/: __init__.py  account.py  add_metric.py  dashboard.py  login.py  metric_detail.py  welcome.py
src/app/repositories/: metric_repo.py  user_repo.py
src/metrics_tracker/: auth.py  errors.py  models.py  utils.py
src/metrics_tracker/components/: layout.py
src/metrics_tracker/pages/: __init__.py  account.py  dashboard.py  detail.py  dummy.py  new_metric.py  welcome.py
src/metrics_tracker/repositories/: __init__.py  metric_repo.py  user_repo.py
src/notebooks/: custom.css  repro.py  scratch.py  ui.py
src/scripts/: create_db.py  test_data.py
test-data/: meditate.csv  mood.csv  weight.csv
tests/: conftest.py  test_phase2.py
(+7 files in other folders)
