[project]
name = "metrics-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "firebase-admin>=6.6.0",
    "httpx>=0.28.0",
    "humanize>=4.15.0",
    "ipykernel>=7.2.0",
    "marimo>=0.20.4",
    "matplotlib>=3.10.8",
    "nicegui>=3.8.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pytz>=2026.1.post1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metrics_tracker"]
